vcluster_versioned_docs/version-0.34.0/configure/vcluster-yaml/control-plane/other/advanced/workload-service-account.mdx
---
title: Workload service account
sidebar_label: workloadServiceAccount
sidebar_position: 2
sidebar_class_name: host-nodes
---

import WorkloadServiceAccount from '../../../../../_partials/config/controlPlane/advanced/workloadServiceAccount.mdx'
import TenancySupport from '../../../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

:::note Private Nodes
For private nodes, workload pods run on dedicated nodes and do not sync to the Control Plane Cluster namespace. Configure image pull authentication at the node level using [`privateNodes.joinNode.containerd.registry`](/docs/vcluster/configure/vcluster-yaml/private-nodes/#privateNodes-joinNode-containerd-registry).
:::

The workloadServiceAccount allows you to enforce the use of a specific ServiceAccount for all vCluster workload pods running in the host cluster.
For example, you can attach a shared imagePullSecret to the ServiceAccount so that all synced pods use the same secret when pulling container images.
```yaml
controlPlane:
  advanced:
    workloadServiceAccount:
      enabled: true
      name: image-pull-sa
      imagePullSecrets:
        - name: workload-service-account-image-pull-secret
```
:::note
The pod specification (spec) of the synced workloads should not define its own imagePullSecrets.
This is because imagePullSecrets are only copied from the ServiceAccount to the pod when the pod specification does not already include them.

The referenced imagePullSecrets must also exist in the host namespace where the vCluster’s workload pods are synced.

An easy way to achieve this is by using [Virtual Cluster Templates](/platform/administer/templates/create-templates).
In addition to allowing you to add arbitrary Kubernetes objects inside the virtual cluster, Virtual Cluster Templates also enable you to create arbitrary Kubernetes objects in the host cluster namespace where the vCluster’s StatefulSet is deployed.
:::

If [syncing ServiceAccount resources from the virtual cluster to the host cluster](../../../sync/to-host/advanced/service-accounts.mdx) is enabled, the `workloadServiceAccount` setting is ignored.


## Config reference

<WorkloadServiceAccount/>
